--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
       <div class="container">
-        <h1>Let's make some GIF!!!</h1>
+        <h1>Let's make some GIFS!!</h1>
         <div class="animalFamily d-flex flex-wrap justify-content-start">
         </div>
         <div class="controlPanel d-flex justify-content-end">
